force-app/main/default/objects/Battle_Station__c/fields/Resource_count__c.field-meta.xml
<CustomField>
    <fullName>Resource_count__c</fullName>
    <label>Resource count</label>
    <summaryFilterItems>
        <field>Resource__c.Quantity__c</field>
        <operation>greaterThan</operation>
        <value>100</value>
    </summaryFilterItems>
    <summaryForeignKey>Resource__c.Battle_Station__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>