force-app/main/default/objects/Battle_Station__c/fields/Supply_Sum__c.field-meta.xml
<CustomField>
    <fullName>Supply_Sum__c</fullName>
    <label>Supply Sum</label>
    <summarizedField>Supplies__c.Total_Cost__c</summarizedField>
    <summaryForeignKey>Supplies__c.Battle_Station__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>